...
    }

    public var body: some View {
        VStack(spacing: 0) {
            Picker("Mode", selection: $store.mode) {
                Text("Cook").tag(AppStore.Mode.cook)
                Text("Shop").tag(AppStore.Mode.shop)
            }
            .pickerStyle(.segmented)
            .padding([.horizontal, .top])

            switch store.mode {
            case .cook: CookView(store: store)
...
